# misc_code

./: README.md
abs/: abs.cpp
access_patterns/: access_patterns.cpp
atomic_ref/: atomic_bench.cpp
biased_branches/: likely.cpp  random.cpp
biased_branches/branch/: false.cpp  random_mod.cpp  random_mod_sr.cpp  true.cpp
biased_branches/hints/: unlikely.cpp
clamp/: clamp_bench.cpp
cmake_example/: CMakeLists.txt  PowersConfig.h.in  exponent.cpp  powers.cpp
cmake_example/local_functions/: CMakeLists.txt  Makefile  cmake_install.cmake  exponent.cpp  exponent.h
code_scheduling/: fast_mod.cpp
code_scheduling/base/: base.cpp  base_random.cpp
code_scheduling/fast/: fast.cpp  fast_random.cpp
code_scheduling/hint/: hint.cpp
conditions/: conditions.cpp  sizes.cpp
conditions/bool/: non_power.cpp  power2.cpp  runtime_value.cpp
conditions/branch/: false.cpp  random.cpp  true.cpp
conditions/char/: non_power.cpp  power2.cpp  runtime_value.cpp
denorms/: denorms.cpp
dod/: dod  dod.cpp
dot_product/: dp.cpp
double_buffering/: double_buffering.cpp
duplicate_removal/: duplicate_removal.cpp
false_sharing/: false_sharing.cpp
hw_barrier/: hw_barrier.cpp  peterson.cpp  sw_barrier.cpp
inc_bench/: a.out  bad_inc.cpp  inc_bench.cpp
java_sll/: LinkedList.java
lru_cache/: branch_lru.cpp  branchless_lru.cpp
parallel_reduction/: baseline.cpp  baseline_parallel.cpp  tbb.cpp  work_queue.cpp
peterson/: peterson.cpp  peterson_hw.cpp  peterson_sw.cpp
recursion/: fib.cpp
simple_bench/: my_bench.cpp
sorting/: components.cpp  sorting.cpp
spinlock/: baseline.cpp  baseline_pthread_spinlock.cpp  naive.cpp  opt1.cpp  opt2.cpp  opt3.cpp  opt4.cpp
store_squash/: store_squash.cpp
strength_reduction/: mod_bench.cpp
sum_reduction/: generalized.cu  sum_reduction.cu
task_group/: task_group.cpp
thread_affinity/: thread_affinity.cpp
vector_add/: vectorAdd.cu
work_queue/: baseline.cpp  work_queue.cpp
(+7 files in other folders)
